[package]
name = "Rust-by-example-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
tokio = { version = "1.0.0", features = ["full"] }
reqwest = "0.11.0"
anyhow = "1.0.94"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.135"
serde_path_to_error = "0.1.16"
